# graywolf

./: .gitignore  .goreleaser.yml  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile.goreleaser  Dockerfile.goreleaser.arm64  Makefile  README.md  go.mod  go.sum
.context/: 2026-05-01-android-app-design.md  2026-05-07-android-poc-a-results.md  2026-05-07-android-poc-b-spec.md  2026-05-08-android-poc-c-spec.md  2026-05-08-android-poc-d-spec.md  2026-05-09-android-phase-3-handoff.md  2026-05-09-android-phase-3-results.md  2026-05-09-android-poc-d-results.md
.githooks/: pre-commit
.github/: armhf-t64-htstamp-canary.c
.github/workflows/: android.yml  armhf-t64-htstamp.yml  ci.yml  fuzz.yml  release.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
cmd/flareschema-gen/: main.go
cmd/graywolf/: android_config.go  android_config_test.go  main.go  main_android.go
cmd/graywolf-pocb/: auth.go  framing.go  main.go  main_test.go  pocb_index.html
cmd/smoke-kiss-tcp-client/: main.go
docs/flareschema/: v1.json
docs/handbook/: actions-handler-safety-webhooks.html  actions.html  agwpe.html  architecture.html  audio.html  ax25-terminal.html  beacons.html  callsign.html  channels.html  configurations.html  digipeater.html  gps.html  history-database.html  igate.html  index.html  installation.html  kiss-bluetooth.html  kiss-serial.html  kiss.html  livemap.html  logs.html  maps.html  messaging.html  monitoring.html  openapi.json  openapi.yaml  preferences.html  privacy.html  ptt.html  remote-actions.html  remote-kiss-tnc.html  simulation.html
docs/plans/: 2026-06-11-armhf-t64-alsa-htstamp-fix.md
docs/wiki/: README.md  actions.md  build-pipelines.md  code-map.md  glossary.md  invariants.md  remote-actions.md  system-topology.md
examples/actions/: README.md
graywolf/: go.mod  go.sum
graywolf-modem/: Cargo.toml
pkg/actions/: audit.go  (+24 more)
poc-a-android/: Cargo.toml
poc-a-android/src/: lib.rs  usb.rs
proto/: graywolf.proto  platform.proto
web/: embed.go  index.html  package-lock.json  package.json
(+987 files in other folders)
